--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <input type="number" [(ngModel)]="name" />
-  <p>
-    {{name}}
-  </p>
+<div class="container">
+  <div class="row">
+    <h3>Getstarted</h3>
+    <div class="col-xs-12">
+      <div style="text-align:center">
+        <input type="number" [(ngModel)]="name" />
+        <p>
+          {{name}}
+        </p>
+      </div>
+      <hr>
+      <app-servers></app-servers>
+      <!-- <div app-servers></div> -->
+    </div>
+  </div>
 </div>
-
