--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container" style="">
+<div class="container">
   <div class="row">
     <h3>Getstarted</h3>
     <div class="col-xs-12">
